Changed About Section

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                         <h4 class="title-text text-uppercase"> Developer | Designer | Artist</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex wrap">
-                                <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire me</button>
+                                <a href="mailto:itsvarsharma@gmail.com" class="btn button primary-button mr-4 text-uppercase">Hire me</a>
                                 <p>&nbsp  &nbsp &nbsp</p>
-                                <button type="button" class="btn button secondary-button mr-4 text-uppercase"> GET CV</button>
+                                <a href="./Resume-Varsha.pdf" class="btn button secondary-button mr-4 text-uppercase" >Get cv</a>
                             </div>
                         </div>
                     </div>
@@ -85,30 +85,33 @@
         <section class="about-area">
             <div class="containerfluid">
                 <div class="row">
-                    <div class="col-lg-6 col-md-12 about-image">
+                    <div class="col-lg-6 col-md-12 about-image"  >
                             <img style="padding: 0.8rem 5rem; width: 40rem;" src="./img/about.avif" alt="">
                     </div>
                     <div class="col-lg-6 col-md-12 about-title">
                         <h2 class="text-uppercase pt-5">
-                            <span>Let me</span>
-                            <span>Introduce</span>
-                            <span>Myself</span>
+                            <span>a</span>
+                            <span>little bit</span>
+                            <span>about me</span>
                         </h2>
-                        <div class="paragraph py-4 w-75">
+                        <div class="paragraph">
                             <p class="para">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, tempora impedit asperiores perferendis in facilis commodi magnam voluptatem explicabo doloremque magni suscipit exercitationem ex reiciendis dolorem blanditiis! Veritatis, reprehenderit minima.
-                            </p>
-                            <p class="para">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.Deserunt, tempora impedit asperiores perferendis.
-                            </p>
-                        </div>
+                                My unique blend of UI/UX design and front-end development skills allows me to create designs that not only look great, but also function seamlessly. I have a deep understanding of user behavior and am able to translate user needs and business requirements into engaging and effective designs. With my strong attention to detail and ability to collaborate with cross-functional teams, I am able to deliver projects on time and to the highest quality. I am always exploring new technologies and design trends to stay ahead of the curve and bring fresh ideas to every project. Let's connect and discuss how I can help elevate your next design project.</p>                        </div>
                         <button type="button" class="btn button primary-button text-uppercase">Download CV</button>
                     </div>
                 </div>
             </div>
         </section>
         <!-- -------------------------- End of About area--------------------- -->
-
+        <div class="tools">
+            <table>
+                <tr class="rows">
+                    <td class="sw">Figma</td>
+                    <td class="sw">Canva</td>
+                    <td class="sw">Adobe Photoshop</td>
+                </tr>
+            </table>
+        </div>
         <!-- ---------------------------Start Brand area--------------------------- -->
         <section class="brand-area">
             <div class="container-fluid">
