reduced extra spacings

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         <a class="nav-link" href="#">ABOUT</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">PORTFOLIO</a>
+                        <a class="nav-link" href="https://www.behance.net/varshasharma12">PORTFOLIO</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">PROJECTS</a>
+                        <a class="nav-link" href="https://github.com/itsvarsharma">PROJECTS</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">PAGES</a>
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="#">BLOGS</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
+                        <a class="nav-link" href="#">CONTACTS</a>
                       </li>
                        
                     </ul>
@@ -96,8 +96,11 @@
                         </h2>
                         <div class="paragraph">
                             <p class="para">
-                                My unique blend of UI/UX design and front-end development skills allows me to create designs that not only look great, but also function seamlessly. I have a deep understanding of user behavior and am able to translate user needs and business requirements into engaging and effective designs. With my strong attention to detail and ability to collaborate with cross-functional teams, I am able to deliver projects on time and to the highest quality. I am always exploring new technologies and design trends to stay ahead of the curve and bring fresh ideas to every project. Let's connect and discuss how I can help elevate your next design project.</p>                        </div>
-                        <button type="button" class="btn button primary-button text-uppercase">Download CV</button>
+                                My unique blend of UI/UX design and front-end development skills allows me to create designs that not only look great, but also function seamlessly. 
+                                I have a deep understanding of user behavior and am able to translate user needs and business requirements into engaging and effective designs. 
+                                With my strong attention to detail and ability to collaborate with cross-functional teams, I am able to deliver projects on time and to the highest quality. 
+                                <br> <br> I am always exploring new technologies and design trends to stay ahead of the curve and bring fresh ideas to every project. Let's connect and discuss how I can help elevate your next design project.</p>                        </div>
+                                <a href="./Resume-Varsha.pdf" class="btn button primary-button mr-4 text-uppercase" >download cv</a>
                     </div>
                 </div>
             </div>
