--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
 
     <!------------------------------ Navigation bar-------------------------- -->
@@ -19,39 +21,41 @@
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light fixed-top">
                 <!-- <div class="container-fluid"> -->
-                  <a class="navbar-brand" href="#"><img src="./img/Varsha.png" alt="logo" width="70px"></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="#"><img src="./img/Varsha.png" alt="logo" width="70px"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">ABOUT</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="https://www.behance.net/varshasharma12">PORTFOLIO</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/itsvarsharma">PROJECTS</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">PAGES</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">BLOGS</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACTS</a>
-                      </li>
-                       
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.behance.net/varshasharma12">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/itsvarsharma">PROJECTS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">PAGES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">BLOGS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONTACTS</a>
+                        </li>
+
                     </ul>
-                  </div>
+                </div>
                 <!-- </div> -->
-              </nav>
+            </nav>
         </div>
     </header>
     <!------------------------------ Navigation bar-------------------------- -->
@@ -68,14 +72,17 @@
                         <h4 class="title-text text-uppercase"> Developer | Designer | Artist</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex wrap">
-                                <a href="mailto:itsvarsharma@gmail.com" class="btn button primary-button mr-4 text-uppercase">Hire me</a>
-                                <p>&nbsp  &nbsp &nbsp</p>
-                                <a href="./Resume-Varsha.pdf" class="btn button secondary-button mr-4 text-uppercase" >Get cv</a>
+                                <a href="mailto:itsvarsharma@gmail.com"
+                                    class="btn button primary-button mr-4 text-uppercase">Hire me</a>
+                                <p>&nbsp &nbsp &nbsp</p>
+                                <a href="./Resume-Varsha.pdf"
+                                    class="btn button secondary-button mr-4 text-uppercase">Get cv</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 banner-image">
-                        <img src="./img/girl-with-laptop-chair-freelance-studying-concept-illustration-vector_199064-194.avif" alt="banner" class="img-fluid">
+                        <img src="./img/girl-with-laptop-chair-freelance-studying-concept-illustration-vector_199064-194.avif"
+                            alt="banner" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -85,8 +92,8 @@
         <section class="about-area">
             <div class="containerfluid">
                 <div class="row">
-                    <div class="col-lg-6 col-md-12 about-image"  >
-                            <img style="padding: 0.8rem 5rem; width: 40rem;" src="./img/about.avif" alt="">
+                    <div class="col-lg-6 col-md-12 about-image">
+                        <img style="padding: 0.8rem 5rem; width: 40rem;" src="./img/about.avif" alt="">
                     </div>
                     <div class="col-lg-6 col-md-12 about-title">
                         <h2 class="text-uppercase pt-5">
@@ -96,38 +103,95 @@
                         </h2>
                         <div class="paragraph">
                             <p class="para">
-                                My unique blend of UI/UX design and front-end development skills allows me to create designs that not only look great, but also function seamlessly. 
-                                I have a deep understanding of user behavior and am able to translate user needs and business requirements into engaging and effective designs. 
-                                With my strong attention to detail and ability to collaborate with cross-functional teams, I am able to deliver projects on time and to the highest quality. 
-                                <br> <br> I am always exploring new technologies and design trends to stay ahead of the curve and bring fresh ideas to every project. Let's connect and discuss how I can help elevate your next design project.</p>                        </div>
-                                <a href="./Resume-Varsha.pdf" class="btn button primary-button mr-4 text-uppercase" >download cv</a>
+                                My unique blend of UI/UX design and front-end development skills allows me to create
+                                designs that not only look great, but also function seamlessly.
+                                I have a deep understanding of user behavior and am able to translate user needs and
+                                business requirements into engaging and effective designs.
+                                With my strong attention to detail and ability to collaborate with cross-functional
+                                teams, I am able to deliver projects on time and to the highest quality.
+                                <br> <br> I am always exploring new technologies and design trends to stay ahead of the
+                                curve and bring fresh ideas to every project. Let's connect and discuss how I can help
+                                elevate your next design project.
+                            </p>
+                        </div>
+                        <a href="./Resume-Varsha.pdf" class="btn button primary-button mr-4 text-uppercase">download
+                            cv</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- -------------------------- End of About area--------------------- -->
-        <div class="tools">
-            <table>
-                <tr class="rows">
-                    <td class="sw">Figma</td>
-                    <td class="sw">Canva</td>
-                    <td class="sw">Adobe Photoshop</td>
-                </tr>
-            </table>
-        </div>
         <!-- ---------------------------Start Brand area--------------------------- -->
         <section class="brand-area">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xl-6 col-lg-12 col-md-12">
-                        <div class="row">
-                            <div class="col-lg-4 col-md6 com-sm-6">
+                        <div class="first-row row">
+                            <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="single-brand">
-
+                                    <img src="./img/tools/Logo1.svg" alt="">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md6 com-sm-6"></div>
-                            <div class="col-lg-4 col-md6 com-sm-6"></div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo2.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo3.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo4.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo5.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo1.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo1.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo1.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo1.svg" alt="">
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg12 col-md-12">
+                        <div class="experience-area">
+                            <div class="d-flex-flex-row years-area">
+                                <h2 class="p-3 years">2</h2>
+                                <h2>
+                                    <span>Years</span>
+                                    <span>Experience</span>
+                                    <span>Working</span>
+                                </h2>
+                            </div>
+                            <div class="d-flex-flex-row flex-wrap call-area">
+                                <span><i class="fa-solid fa-envelope fa-3x px-3"></i></span>
+                                <div class="call-now">
+                                    <a href="mailto:itsvarsharma@gmail.com" class="h4">EMAIL NOW</a>
+                                    <span> itsvarsharma@gmail.com</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -136,10 +200,11 @@
         <!-- ---------------------------End Brand area--------------------------- -->
     </main>
     <!-- -------------------------------------- End of Main area------------------------ -->
-  
+
     <!-- jQuery file-->
     <script src="./js/jquery.3.4.1.js"></script>
     <!-- js bootstrap -->
     <script src="./js/bootstrap.min.js"></script>
 </body>
+
 </html>
