Improved experience area

--- a/index.html
+++ b/index.html
@@ -127,49 +127,64 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-12 col-md-12">
                         <div class="first-row row">
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="single-brand">
                                     <img src="./img/tools/Logo1.svg" alt="">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="single-brand">
                                     <img src="./img/tools/Logo2.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="single-brand">
                                     <img src="./img/tools/Logo3.svg" alt="">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="single-brand">
                                     <img src="./img/tools/Logo4.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="single-brand">
                                     <img src="./img/tools/Logo5.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="single-brand">
-                                    <img src="./img/tools/Logo1.svg" alt="">
+                                    <img src="./img/tools/Logo6.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="single-brand">
-                                    <img src="./img/tools/Logo1.svg" alt="">
+                                    <img src="./img/tools/Logo7.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="single-brand">
-                                    <img src="./img/tools/Logo1.svg" alt="">
+                                    <img src="./img/tools/Logo8.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="single-brand">
-                                    <img src="./img/tools/Logo1.svg" alt="">
+                                    <img src="./img/tools/Logo9.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo10.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo11.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-6">
+                                <div class="single-brand">
+                                    <img src="./img/tools/Logo12.png" alt="">
                                 </div>
                             </div>
 
