--- a/index.html
+++ b/index.html
@@ -187,7 +187,6 @@
                                     <img src="./img/tools/Logo12.png" alt="">
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg12 col-md-12">
@@ -215,7 +214,34 @@
         <!-- ---------------------------End Brand area--------------------------- -->
     </main>
     <!-- -------------------------------------- End of Main area------------------------ -->
-
+    <footer>
+        <div class="wrap-up ">
+            <div class="logos">
+                <a href="https://twitter.com/itsvarsharma"><img src="./img/logos/Logo1.png" alt=""></a>
+            </div>
+            <div class="logos">
+                <a href="https://www.facebook.com/itsvarsharma"><img src="./img/logos/Logo2.webp" alt=""></a>
+            </div>
+            <div class="logos">
+                <a href="https://www.instagram.com/itsvarsharma"><img src="./img/logos/Logo3.webp" alt=""></a>
+            </div>
+            <div class="logos">
+                <a href="https://behance.com/varshasharma12"><img src="./img/logos/logo4.svg" alt=""></a>
+            </div>
+            <div class="logos">
+                <a href="https://pinterest.com/itsvarsharma"><img src="./img/logos/Logo5.png" alt=""></a>
+            </div>
+            <div class="logos">
+                <a href="https://www.linkedin.com/in/itsvarsharma"><img src="./img/logos/Logo6.png" alt=""></a>
+            </div>
+            <div class="logos">
+                <a href="https://www.youtube.com/channel/UCSHk2Je0XAV5_KGLPw39h8w"><img style="padding: 1.2rem;" src="./img/logos/Logo7.webp" alt=""></a>
+            </div>
+            <div class="logos">
+                <a href="https://github.com/itsvarsharma"><img src="./img/logos/Logo8.png" alt=""></a>
+            </div>
+        </div>
+    </footer>
     <!-- jQuery file-->
     <script src="./js/jquery.3.4.1.js"></script>
     <!-- js bootstrap -->
