Added four chapters

--- a/index.html
+++ b/index.html
@@ -212,6 +212,81 @@
             </div>
         </section>
         <!-- ---------------------------End Brand area--------------------------- -->
+
+        <!-- ====================================Services=========================== -->
+        <section class="services-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center services-title">
+                        <h1 class="text-uppercase title-text">Chapters and expertise</h1>
+                        <p class="para">
+                            I'm a multi-disciplinary professional with expertise in graphic design, UI/UX, development, and DSA. With over 5 years of experience, I excel in designing user-friendly interfaces, programming, and data structures, and delivering innovative solutions that bridge the gap between design and technology
+                        </p>
+                    </div>
+                </div>
+                <div class="container services-list">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="sevices-img text-center py-4">
+                                    <img src="./img/chapters/gd.png" alt="Services-1">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Graphic Design</h5>
+                                    <p class="card-text text-secondary">
+                                        With an eye for aesthetics and attention to detail, I create visually compelling designs that communicate brand messages effectively.                                    </p>
+                                    <h6 style="font-size: smaller; font-weight:400;"><a href="https://behance.com/varshasharma12">Checkout more on Behance</a></h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="sevices-img text-center py-4">
+                                    <img src="./img/chapters/ui-ux.webp" alt="Services-2">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">UI/UX</h5>
+                                    <p class="card-text text-secondary">
+                                        I prioritize user needs when designing intuitive interfaces and user experiences that improve overall usability and make complex tasks simple
+                                    </p>
+                                    <h6 style="font-size: smaller;font-weight:400;"> <a href="https://behance.com/varshasharma12">Checkout more on Behance</a></h6>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="sevices-img text-center py-4">
+                                    <img src="./img/chapters/dev.png" alt="Services-3">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Development</h5>
+                                    <p class="card-text text-secondary">
+                                        With my programming skills and experience, I build robust and scalable web applications that meet client specifications and exceed their expectations
+                                    </p>
+                                    <h6 style="font-size: smaller;font-weight:400;"><a href="https://behance.com/varshasharma12">Checkout more on GitHub</a></h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="sevices-img text-center py-4">
+                                    <img src="./img/chapters/dsa.png" alt="Services-4">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">DSA</h5>
+                                    <p class="card-text text-secondary">
+                                        I have a strong foundation in data structures and algorithms, allowing me to develop efficient and optimized solutions to complex problems.                                    </p>
+                                    <h6 style="font-size: smaller;font-weight:400;"><a href="https://behance.com/varshasharma12">Checkout more on Leetcode</a></h6>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ====================================Services=========================== -->
     </main>
     <!-- -------------------------------------- End of Main area------------------------ -->
     <footer>
@@ -239,6 +314,9 @@
             </div>
             <div class="logos">
                 <a href="https://github.com/itsvarsharma"><img src="./img/logos/Logo8.png" alt=""></a>
+            </div>
+            <div class="logos">
+                <a href="https://leetcode.com/itsvarsharma"><img src="./img/logos/logo9.webp" alt=""></a>
             </div>
         </div>
     </footer>
