--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <a class="nav-link" href="#">BLOGS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACTS</a>
+                            <a class="nav-link" href="#wrap-up">CONTACTS</a>
                         </li>
 
                     </ul>
@@ -220,7 +220,7 @@
                     <div class="col-lg-12 text-center services-title">
                         <h1 class="text-uppercase title-text">Chapters and expertise</h1>
                         <p class="para">
-                            I'm a multi-disciplinary professional with expertise in graphic design, UI/UX, development, and DSA. With over 5 years of experience, I excel in designing user-friendly interfaces, programming, and data structures, and delivering innovative solutions that bridge the gap between design and technology
+                            I'm a multi-disciplinary professional with expertise in graphic design, UI/UX, development, and DSA. With over 2 years of experience, I excel in designing user-friendly interfaces, programming, and data structures, and delivering innovative solutions that bridge the gap between design and technology
                         </p>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                                 </div>
                                 <div class="card-body text-center">
                                     <h5 class="card-title text-uppercase font-roboto">DSA</h5>
-                                    <p class="card-text text-secondary">
+                                    <p class="card-text text-secondary describe">
                                         I have a strong foundation in data structures and algorithms, allowing me to develop efficient and optimized solutions to complex problems.                                    </p>
                                     <h6 style="font-size: smaller;font-weight:400;"><a href="https://behance.com/varshasharma12">Checkout more on Leetcode</a></h6>
 
@@ -310,7 +310,7 @@
                 <a href="https://www.linkedin.com/in/itsvarsharma"><img src="./img/logos/Logo6.png" alt=""></a>
             </div>
             <div class="logos">
-                <a href="https://www.youtube.com/channel/UCSHk2Je0XAV5_KGLPw39h8w"><img style="padding: 1.2rem;" src="./img/logos/Logo7.webp" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCSHk2Je0XAV5_KGLPw39h8w"><img style="padding: .6rem;" src="./img/logos/Logo7.webp" alt=""></a>
             </div>
             <div class="logos">
                 <a href="https://github.com/itsvarsharma"><img src="./img/logos/Logo8.png" alt=""></a>
