--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@
                     <div class="col-lg-12 text-center services-title">
                         <h1 class="text-uppercase title-text">Chapters and expertise</h1>
                         <p class="para">
-                            I'm a multi-disciplinary professional with expertise in graphic design, UI/UX, development, and DSA. With over 2 years of experience, I excel in designing user-friendly interfaces, programming, and data structures, and delivering innovative solutions that bridge the gap between design and technology
+                            I'm a multi-disciplinary professional with expertise in graphic design, UI/UX, development,
+                            and DSA. With over 2 years of experience, I excel in designing user-friendly interfaces,
+                            programming, and data structures, and delivering innovative solutions that bridge the gap
+                            between design and technology
                         </p>
                     </div>
                 </div>
@@ -234,8 +237,10 @@
                                 <div class="card-body text-center">
                                     <h5 class="card-title text-uppercase font-roboto">Graphic Design</h5>
                                     <p class="card-text text-secondary">
-                                        With an eye for aesthetics and attention to detail, I create visually compelling designs that communicate brand messages effectively.                                    </p>
-                                    <h6 style="font-size: smaller; font-weight:400;"><a href="https://behance.com/varshasharma12">Checkout more on Behance</a></h6>
+                                        With an eye for aesthetics and attention to detail, I create visually compelling
+                                        designs that communicate brand messages effectively. </p>
+                                    <h6 style="font-size: smaller; font-weight:400;"><a
+                                            href="https://behance.com/varshasharma12">Checkout more on Behance</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -247,9 +252,11 @@
                                 <div class="card-body text-center">
                                     <h5 class="card-title text-uppercase font-roboto">UI/UX</h5>
                                     <p class="card-text text-secondary">
-                                        I prioritize user needs when designing intuitive interfaces and user experiences that improve overall usability and make complex tasks simple
+                                        I prioritize user needs when designing intuitive interfaces and user experiences
+                                        that improve overall usability and make complex tasks simple
                                     </p>
-                                    <h6 style="font-size: smaller;font-weight:400;"> <a href="https://behance.com/varshasharma12">Checkout more on Behance</a></h6>
+                                    <h6 style="font-size: smaller;font-weight:400;"> <a
+                                            href="https://behance.com/varshasharma12">Checkout more on Behance</a></h6>
 
                                 </div>
                             </div>
@@ -262,9 +269,11 @@
                                 <div class="card-body text-center">
                                     <h5 class="card-title text-uppercase font-roboto">Development</h5>
                                     <p class="card-text text-secondary">
-                                        With my programming skills and experience, I build robust and scalable web applications that meet client specifications and exceed their expectations
+                                        With my programming skills and experience, I build robust and scalable web
+                                        applications that meet client specifications and exceed their expectations
                                     </p>
-                                    <h6 style="font-size: smaller;font-weight:400;"><a href="https://behance.com/varshasharma12">Checkout more on GitHub</a></h6>
+                                    <h6 style="font-size: smaller;font-weight:400;"><a
+                                            href="https://behance.com/varshasharma12">Checkout more on GitHub</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -276,8 +285,10 @@
                                 <div class="card-body text-center">
                                     <h5 class="card-title text-uppercase font-roboto">DSA</h5>
                                     <p class="card-text text-secondary describe">
-                                        I have a strong foundation in data structures and algorithms, allowing me to develop efficient and optimized solutions to complex problems.                                    </p>
-                                    <h6 style="font-size: smaller;font-weight:400;"><a href="https://behance.com/varshasharma12">Checkout more on Leetcode</a></h6>
+                                        I have a strong foundation in data structures and algorithms, allowing me to
+                                        develop efficient and optimized solutions to complex problems. </p>
+                                    <h6 style="font-size: smaller;font-weight:400;"><a
+                                            href="https://behance.com/varshasharma12">Checkout more on Leetcode</a></h6>
 
                                 </div>
                             </div>
@@ -286,7 +297,106 @@
                 </div>
             </div>
         </section>
+
         <!-- ====================================Services=========================== -->
+
+        <!-- =================================Projects================================= -->
+        <section>
+            
+            <div class="wrap">
+                <div class="row">
+                    <div class="col-lg-12 text-center services-title">
+                        <h3  class="text-uppercase title-text">My Projects</h3><br>
+                        <p class="para">
+                            Welcome to the project section of my portfolio website! <br>
+                            This section showcases the various projects I have worked on, providing an overview of the scope, objectives, and outcomes of each project. 
+                            As you explore this section, you will see how I have utilized my skills and expertise to tackle various challenges and deliver innovative solutions to clients. 
+                            By showcasing my projects on this website, I hope to provide you with a glimpse into my work and capabilities, and demonstrate my passion for innovation and problem-solving. 
+                            Thank you for taking the time to explore my projects!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img
+                        src='/img/projects/srijan.png' />
+                    <div class="text">
+                        <h1>Srijan</h1>
+                        <h2 class="animate-text">"Celebrate special moments with unique gifts"</h2>
+                        <p class="animate-text">Srijan is a website that offers personalized gifting solutions for all occasions, providing a unique and memorable way to celebrate special moments. </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;" href="https://srijan2.netlify.app/">Link</a></span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img
+                        src='/img/projects/graas.png' />
+                    <div class="text">
+                        <h1>GRAAS</h1>
+                        <h2 class="animate-text">"Simplifying authentication with user-friendly graphics"</h2>
+                        <p class="animate-text">GRAAS is a graphical authentication system that simplifies the authentication process by using user-friendly graphics to improve security and usability </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;" href="https://graphical-authentication-system.netlify.app/">Link</a></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img
+                        src='img/projects/portfolio.png' />
+                    <div class="text">
+                        <h1>Portfolio</h1>
+                        <h2 class="animate-text">"Showcasing my skills and achievements"</h2>
+                        <p class="animate-text"> This project is a personal portfolio website designed to showcase your skills, experiences, and achievements in a visually appealing and professional manner. </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;" href="https://itsvarsharma.netlify.app/">Link</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img
+                        src='/img/projects/erith.png' />
+                    <div class="text">
+                        <h1>Calculator</h1>
+                        <h2 class="animate-text">"Simple, accurate, and efficient calculations"</h2>
+                        <p class="animate-text">ERITH is a calculator app that provides simple, accurate, and efficient calculations, offering all arithmatic operations to meet individual needs. </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;" href="https://erith-by-varsha.netlify.app/">Link</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img
+                        src='/img/projects/todo.png' />
+                    <div class="text">
+                        <h1>To Do List</h1>
+                        <h2 class="animate-text">"Stay organized and get things done"</h2>
+                        <p class="animate-text">This project is a to-do list app designed to help users stay organized and manage their tasks efficiently, with a user-friendly interface. </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;" href="https://github.com/itsvarsharma/To-Do-List">Link</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 tile">
+                    <img
+                        src='/img/projects/satkaar.png' />
+                    <div class="text">
+                        <h1>Satkaar</h1>
+                        <h2 class="animate-text">"Experience the warmth of a home away from home"</h2>
+                        <p class="animate-text">
+                            Satkaar provides unique homestay experiences, connecting travelers with local hosts and promoting responsible and sustainable tourism.
+                        </p>
+                        <div class="dots">
+                            <span><a style="color: aliceblue;" href="https://github.com/itsvarsharma/Satkaar">Link</a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- =================================Projects================================= -->
     </main>
     <!-- -------------------------------------- End of Main area------------------------ -->
     <footer>
@@ -310,7 +420,8 @@
                 <a href="https://www.linkedin.com/in/itsvarsharma"><img src="./img/logos/Logo6.png" alt=""></a>
             </div>
             <div class="logos">
-                <a href="https://www.youtube.com/channel/UCSHk2Je0XAV5_KGLPw39h8w"><img style="padding: .6rem;" src="./img/logos/Logo7.webp" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCSHk2Je0XAV5_KGLPw39h8w"><img style="padding: .6rem;"
+                        src="./img/logos/Logo7.webp" alt=""></a>
             </div>
             <div class="logos">
                 <a href="https://github.com/itsvarsharma"><img src="./img/logos/Logo8.png" alt=""></a>
