Updated project section

--- a/index.html
+++ b/index.html
@@ -309,10 +309,9 @@
                         <h3  class="text-uppercase title-text">My Projects</h3><br>
                         <p class="para">
                             Welcome to the project section of my portfolio website! <br>
-                            This section showcases the various projects I have worked on, providing an overview of the scope, objectives, and outcomes of each project. 
-                            As you explore this section, you will see how I have utilized my skills and expertise to tackle various challenges and deliver innovative solutions to clients. 
-                            By showcasing my projects on this website, I hope to provide you with a glimpse into my work and capabilities, and demonstrate my passion for innovation and problem-solving. 
-                            Thank you for taking the time to explore my projects!
+                            This section showcases the various projects I have worked on, providing an overview of the scope, objectives, and outcomes of each project.
+                            I hope to provide you with a glimpse into my work and capabilities, and demonstrate my passion for innovation and problem-solving. 
+                            Thank you for taking the time to explore!
                         </p>
                     </div>
                 </div>
@@ -359,7 +358,7 @@
                     <img
                         src='/img/projects/erith.png' />
                     <div class="text">
-                        <h1>Calculator</h1>
+                        <h1>Erith</h1>
                         <h2 class="animate-text">"Simple, accurate, and efficient calculations"</h2>
                         <p class="animate-text">ERITH is a calculator app that provides simple, accurate, and efficient calculations, offering all arithmatic operations to meet individual needs. </p>
                         <div class="dots">
