Updated Footer Section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.behance.net/varshasharma12">PORTFOLIO</a>
@@ -89,7 +89,7 @@
         </section>
         <!-- eeeeeeeeeeeeeeeeeeeeeee End of Banner area eeeeeeeeeeeeeeeeeeee -->
         <!-- --------------------------About area--------------------- -->
-        <section class="about-area">
+        <section class="about-area" id="about">
             <div class="containerfluid">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 about-image">
@@ -302,26 +302,28 @@
 
         <!-- =================================Projects================================= -->
         <section>
-            
+
             <div class="wrap">
                 <div class="row">
                     <div class="col-lg-12 text-center services-title">
-                        <h3  class="text-uppercase title-text">My Projects</h3><br>
+                        <h3 class="text-uppercase title-text">My Projects</h3><br>
                         <p class="para">
                             Welcome to the project section of my portfolio website! <br>
-                            This section showcases the various projects I have worked on, providing an overview of the scope, objectives, and outcomes of each project.
-                            I hope to provide you with a glimpse into my work and capabilities, and demonstrate my passion for innovation and problem-solving. 
+                            This section showcases the various projects I have worked on, providing an overview of the
+                            scope, objectives, and outcomes of each project.
+                            I hope to provide you with a glimpse into my work and capabilities, and demonstrate my
+                            passion for innovation and problem-solving.
                             Thank you for taking the time to explore!
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
-                    <img
-                        src='/img/projects/srijan.png' />
+                    <img src='/img/projects/srijan.png' />
                     <div class="text">
                         <h1>Srijan</h1>
                         <h2 class="animate-text">"Celebrate special moments with unique gifts"</h2>
-                        <p class="animate-text">Srijan is a website that offers personalized gifting solutions for all occasions, providing a unique and memorable way to celebrate special moments. </p>
+                        <p class="animate-text">Srijan is a website that offers personalized gifting solutions for all
+                            occasions, providing a unique and memorable way to celebrate special moments. </p>
                         <div class="dots">
                             <span><a style="color: aliceblue;" href="https://srijan2.netlify.app/">Link</a></span>
                         </div>
@@ -330,65 +332,70 @@
 
 
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
-                    <img
-                        src='/img/projects/graas.png' />
+                    <img src='/img/projects/graas.png' />
                     <div class="text">
                         <h1>GRAAS</h1>
                         <h2 class="animate-text">"Simplifying authentication with user-friendly graphics"</h2>
-                        <p class="animate-text">GRAAS is a graphical authentication system that simplifies the authentication process by using user-friendly graphics to improve security and usability </p>
+                        <p class="animate-text">GRAAS is a graphical authentication system that simplifies the
+                            authentication process by using user-friendly graphics to improve security and usability
+                        </p>
                         <div class="dots">
-                            <span><a style="color: aliceblue;" href="https://graphical-authentication-system.netlify.app/">Link</a></span>
+                            <span><a style="color: aliceblue;"
+                                    href="https://graphical-authentication-system.netlify.app/">Link</a></span>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
-                    <img
-                        src='img/projects/portfolio.png' />
+                    <img src='img/projects/portfolio.png' />
                     <div class="text">
                         <h1>Portfolio</h1>
                         <h2 class="animate-text">"Showcasing my skills and achievements"</h2>
-                        <p class="animate-text"> This project is a personal portfolio website designed to showcase your skills, experiences, and achievements in a visually appealing and professional manner. </p>
+                        <p class="animate-text"> This project is a personal portfolio website designed to showcase your
+                            skills, experiences, and achievements in a visually appealing and professional manner. </p>
                         <div class="dots">
                             <span><a style="color: aliceblue;" href="https://itsvarsharma.netlify.app/">Link</a></span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
-                    <img
-                        src='/img/projects/erith.png' />
+                    <img src='/img/projects/erith.png' />
                     <div class="text">
                         <h1>Erith</h1>
                         <h2 class="animate-text">"Simple, accurate, and efficient calculations"</h2>
-                        <p class="animate-text">ERITH is a calculator app that provides simple, accurate, and efficient calculations, offering all arithmatic operations to meet individual needs. </p>
+                        <p class="animate-text">ERITH is a calculator app that provides simple, accurate, and efficient
+                            calculations, offering all arithmatic operations to meet individual needs. </p>
                         <div class="dots">
-                            <span><a style="color: aliceblue;" href="https://erith-by-varsha.netlify.app/">Link</a></span>
+                            <span><a style="color: aliceblue;"
+                                    href="https://erith-by-varsha.netlify.app/">Link</a></span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
-                    <img
-                        src='/img/projects/todo.png' />
+                    <img src='/img/projects/todo.png' />
                     <div class="text">
                         <h1>To Do List</h1>
                         <h2 class="animate-text">"Stay organized and get things done"</h2>
-                        <p class="animate-text">This project is a to-do list app designed to help users stay organized and manage their tasks efficiently, with a user-friendly interface. </p>
+                        <p class="animate-text">This project is a to-do list app designed to help users stay organized
+                            and manage their tasks efficiently, with a user-friendly interface. </p>
                         <div class="dots">
-                            <span><a style="color: aliceblue;" href="https://github.com/itsvarsharma/To-Do-List">Link</a></span>
+                            <span><a style="color: aliceblue;"
+                                    href="https://github.com/itsvarsharma/To-Do-List">Link</a></span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 tile">
-                    <img
-                        src='/img/projects/satkaar.png' />
+                    <img src='/img/projects/satkaar.png' />
                     <div class="text">
                         <h1>Satkaar</h1>
                         <h2 class="animate-text">"Experience the warmth of a home away from home"</h2>
                         <p class="animate-text">
-                            Satkaar provides unique homestay experiences, connecting travelers with local hosts and promoting responsible and sustainable tourism.
+                            Satkaar provides unique homestay experiences, connecting travelers with local hosts and
+                            promoting responsible and sustainable tourism.
                         </p>
                         <div class="dots">
-                            <span><a style="color: aliceblue;" href="https://github.com/itsvarsharma/Satkaar">Link</a></span>
+                            <span><a style="color: aliceblue;"
+                                    href="https://github.com/itsvarsharma/Satkaar">Link</a></span>
                         </div>
                     </div>
                 </div>
@@ -396,37 +403,89 @@
 
         </section>
         <!-- =================================Projects================================= -->
+
+        <!-- <section class="last">
+            <div class="feedback">
+                <form>
+                    <textarea name="" id="" cols="10" rows="10" maxlength="200" aria-label="Write">
+                </textarea>
+                    <button type="submit">Send</button>
+                </form>
+            </div>
+        </section> -->
     </main>
     <!-- -------------------------------------- End of Main area------------------------ -->
-    <footer>
-        <div class="wrap-up ">
-            <div class="logos">
-                <a href="https://twitter.com/itsvarsharma"><img src="./img/logos/Logo1.png" alt=""></a>
+
+    <!-- Footer -->
+    <footer class="site-footer" id="contacts">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <h6>About</h6>
+                    <p class="text-justify">
+                        "Thank you for visiting my portfolio website. I hope you enjoyed exploring my work and learning
+                        more about my expertise in graphic design, UI/UX, development, and DSA. If you have any
+                        questions or would like to discuss potential collaborations, please feel free to reach out to
+                        me. I'm always excited to connect with fellow professionals and explore new opportunities. I
+                        look forward to hearing from you." </p>
+                </div>
+
+                <div class="col-xs-6 col-md-3">
+                    <h6>Profiles & Portfolio</h6>
+                    <ul class="footer-links">
+                        <li><a href="https://github.com/itsvarsharm">Github</a></li>
+                        <li><a href="https://leetcode.com/itsvarsharma">Leetcode</a></li>
+                        <li><a href="https://behance.com/varshasharma12">Behance</a></li>
+                        <li><a href="https://pinterest.com/itsvarsharma">Pinterest</a></li>
+                        <li><a href="https://twitter.com/itsvarsharma">Twitter</a></li>
+                        <li><a href="https://www.facebook.com/itsvarsharma">Facebook</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-xs-6 col-md-3">
+                    <h6>Quick Links</h6>
+                    <ul class="footer-links">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#chapters">Chapters</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="logos">
-                <a href="https://www.facebook.com/itsvarsharma"><img src="./img/logos/Logo2.webp" alt=""></a>
-            </div>
-            <div class="logos">
-                <a href="https://www.instagram.com/itsvarsharma"><img src="./img/logos/Logo3.webp" alt=""></a>
-            </div>
-            <div class="logos">
-                <a href="https://behance.com/varshasharma12"><img src="./img/logos/logo4.svg" alt=""></a>
-            </div>
-            <div class="logos">
-                <a href="https://pinterest.com/itsvarsharma"><img src="./img/logos/Logo5.png" alt=""></a>
-            </div>
-            <div class="logos">
-                <a href="https://www.linkedin.com/in/itsvarsharma"><img src="./img/logos/Logo6.png" alt=""></a>
-            </div>
-            <div class="logos">
-                <a href="https://www.youtube.com/channel/UCSHk2Je0XAV5_KGLPw39h8w"><img style="padding: .6rem;"
-                        src="./img/logos/Logo7.webp" alt=""></a>
-            </div>
-            <div class="logos">
-                <a href="https://github.com/itsvarsharma"><img src="./img/logos/Logo8.png" alt=""></a>
-            </div>
-            <div class="logos">
-                <a href="https://leetcode.com/itsvarsharma"><img src="./img/logos/logo9.webp" alt=""></a>
+            <hr>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by
+                        <a href="#">Varsha Sharma</a>.
+                    </p>
+                </div>
+
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <ul class="social-icons">
+                        <li><a class="twitter" href="https://twitter.com/itsvarsharma"><img src="/img/logos/logo1.png"
+                                    alt=""></a></li>
+                        <li><a class="facebook" href="https://www.facebook.com/itsvarsharma"><img
+                                    src="/img/logos/logo2.webp" alt=""></a></li>
+                        <li><a class="instagram" href="https://www.instagram.com/itsvarsharma"><img
+                                    src="/img/logos/logo3.webp" alt=""></a></li>
+                        <li><a class="behance" href="https://behance.com/varshasharma12"><img src="/img/logos/logo4.svg"
+                                    alt=""></a></li>
+                        <li><a class="pinterest" href="https://pinterest.com/itsvarsharma"><img
+                                    src="/img/logos/logo5.png" alt=""></a></li>
+                        <li><a class="linkedin" href="https://www.linkedin.com/in/itsvarsharma"><img
+                                    src="/img/logos/logo6.png" alt=""></a></li>
+                        <li><a class="youtube" href="https://www.youtube.com/channel/UCSHk2Je0XAV5_KGLPw39h8w"><img
+                                    src="/img/logos/logo7.webp" alt=""></a></li>
+                        <li><a class="github" href="https://github.com/itsvarsharma"><img src="/img/logos/logo8.png"
+                                    alt=""></a></li>
+                        <li><a class="leetcode" href="https://leetcode.com/itsvarsharma"><img
+                                    src="/img/logos/logo9.webp" alt=""></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
