Added feedback form

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                         applications that meet client specifications and exceed their expectations
                                     </p>
                                     <h6 style="font-size: smaller;font-weight:400;"><a
-                                            href="https://behance.com/varshasharma12">Checkout more on GitHub</a></h6>
+                                            href="https://github.com/itsvarsharma">Checkout more on GitHub</a></h6>
                                 </div>
                             </div>
                         </div>
@@ -404,15 +404,16 @@
         </section>
         <!-- =================================Projects================================= -->
 
-        <!-- <section class="last">
+        <section class="last">
             <div class="feedback">
-                <form>
-                    <textarea name="" id="" cols="10" rows="10" maxlength="200" aria-label="Write">
-                </textarea>
+                <div class="form">
+                  <form class="login-form" netlify>
+                    <textarea type="text" placeholder="Write me a message or any feedback"></textarea>
                     <button type="submit">Send</button>
-                </form>
-            </div>
-        </section> -->
+                  </form>
+                </div>
+              </div>
+        </section>
     </main>
     <!-- -------------------------------------- End of Main area------------------------ -->
 
